--- a/style.css
+++ b/style.css
@@ -392,9 +392,12 @@ footer {
 }
 
 .article .full-text {
-  margin-top: 15px;
-  transition: max-height 0.3s ease;
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.5s ease;
 }
+
 
 .hidden {
 
@@ -426,4 +429,5 @@ footer {
 
   display: none;
 }
+
 
