--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ main h2 {
 
 .galerie img {
   width: 300px;
+  height: auto;
   border-radius: 12px;
   border: 3px solid #e63946;
   box-shadow: 0 6px 12px rgba(0,0,0,0.3);
@@ -478,6 +479,7 @@ footer {
     transform: translateY(0);
   }
 }
+
 
 
 
