--- a/style.css
+++ b/style.css
@@ -481,6 +481,14 @@ footer {
 }
 
 
+article {
+  width: 60%; /* largeur personnalisable */
+  margin: 0 auto; /* centre horizontalement */
+  text-align: center; /* centre le texte à l’intérieur */
+  padding: 20px;
+}
+
+
 
 
 
