--- a/style.css
+++ b/style.css
@@ -482,10 +482,11 @@ footer {
 
 
 #competences {
-  background-color: #fff;
+  background-color: transparent; 
   color: #e63946; 
   text-align: center;
 }
+
 
 
 
