--- a/style.css
+++ b/style.css
@@ -483,9 +483,10 @@ footer {
 
 #competences {
   background-color: transparent; 
-  color: #e63946; 
+  color: black;
   text-align: center;
 }
+
 
 
 
